fixed image size

--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Title -->
-    <title>Alime - Photography HTML Template</title>
+        <!-- Title -->
+        <title>Miltiadis Marios Katsakioris - Personal Website</title>
 
     <!-- Favicon -->
     <link rel="icon" href="./img/core-img/favicon.png">
@@ -71,24 +71,6 @@
                             <div class="classynav">
                                 <ul id="nav">
                                     <li><a href="./index.html">Home</a></li>
-                                    <li><a href="#">Pages</a>
-                                        <ul class="dropdown">
-                                            <li><a href="./index.html">- Home</a></li>
-                                            <li><a href="./about.html">- About</a></li>
-                                            <li><a href="./gallery.html">- Gallery</a></li>
-                                            <li><a href="./blog.html">- Blog</a></li>
-                                            <li><a href="./single-blog.html">- Blog Details</a></li>
-                                            <li><a href="./contact.html">- Contact</a></li>
-                                            <li><a href="#">- Dropdown</a>
-                                                <ul class="dropdown">
-                                                    <li><a href="#">- Dropdown Item</a></li>
-                                                    <li><a href="#">- Dropdown Item</a></li>
-                                                    <li><a href="#">- Dropdown Item</a></li>
-                                                    <li><a href="#">- Dropdown Item</a></li>
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                    </li>
                                     <li><a href="./about.html">About</a></li>
                                     <li><a href="./gallery.html">Gallery</a></li>
                                     <li><a href="./blog.html">Blog</a></li>
@@ -138,19 +120,23 @@
                     <!-- Contact Info -->
                     <div class="contact-info mb-30">
                         <p>Email</p>
-                        <a href="mailto:info.deercreative@gmail.com">info.deercreative@gmail.com</a>
+                        <a href="mailto:mmk11@hw.ac.uk">mmk11@hw.ac.uk</a>
                     </div>
+
+                    <a href="img/CV_2018.pdf" download>
+                      <img src="img/cv_logo.png" alt="cv_logo" style="width:50px;height:50px;">
+                    </a>
                     <!-- Contact Info -->
-                    <div class="contact-info mb-30">
+                    <!-- <div class="contact-info mb-30">
                         <p>Call Us</p>
                         <a href="#">+6511.188.888</a>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
                     <!-- Contact Info -->
                     <div class="contact-info mb-30">
-                        <p>Visit Us</p>
-                        <a href="#">60-49 Road 11378 New York</a>
+                        <p>Visit</p>
+                        <a href="#">Room1.53, First Gait, Edinburgh EH14 4AS, UK</a>
                     </div>
                 </div>
             </div>
@@ -162,90 +148,12 @@
     <div class="map-area section-padding-0-80">
         <div class="container">
             <div id="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12309.440717226664!2d24.094896788114085!3d56.9484200464499!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46eecfb0e5073ded%3A0x400cfcd68f2fe30!2sRiga%2C+Latvia!5e0!3m2!1sen!2sbd!4v1550835159592" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d4917.851602327255!2d-3.3179277346745444!3d55.912321!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x86005117bf418eaf!2sEarl+Mountbatten+Building!5e0!3m2!1sen!2sus!4v1559487149336!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12309.440717226664!2d24.094896788114085!3d56.9484200464499!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46eecfb0e5073ded%3A0x400cfcd68f2fe30!2sRiga%2C+Latvia!5e0!3m2!1sen!2sbd!4v1550835159592" allowfullscreen></iframe> -->
             </div>
         </div>
     </div>
     <!-- Map Area End -->
-
-    <!-- Follow Area Start -->
-    <div class="follow-area clearfix">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="section-heading text-center">
-                        <h2>Follow Instagram</h2>
-                        <p>@Alime_photographer</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Instagram Feed Area -->
-        <div class="instragram-feed-area owl-carousel">
-            <!-- Single Instagram Item -->
-            <div class="single-instagram-item">
-                <img src="img/bg-img/11.jpg" alt="">
-                <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#">
-                        <i class="ti-instagram" aria-hidden="true"></i>
-                        <span>Alime_photographer</span>
-                    </a>
-                </div>
-            </div>
-            <!-- Single Instagram Item -->
-            <div class="single-instagram-item">
-                <img src="img/bg-img/12.jpg" alt="">
-                <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#">
-                        <i class="ti-instagram" aria-hidden="true"></i>
-                        <span>Alime_photographer</span>
-                    </a>
-                </div>
-            </div>
-            <!-- Single Instagram Item -->
-            <div class="single-instagram-item">
-                <img src="img/bg-img/13.jpg" alt="">
-                <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#">
-                        <i class="ti-instagram" aria-hidden="true"></i>
-                        <span>Alime_photographer</span>
-                    </a>
-                </div>
-            </div>
-            <!-- Single Instagram Item -->
-            <div class="single-instagram-item">
-                <img src="img/bg-img/14.jpg" alt="">
-                <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#">
-                        <i class="ti-instagram" aria-hidden="true"></i>
-                        <span>Alime_photographer</span>
-                    </a>
-                </div>
-            </div>
-            <!-- Single Instagram Item -->
-            <div class="single-instagram-item">
-                <img src="img/bg-img/15.jpg" alt="">
-                <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#">
-                        <i class="ti-instagram" aria-hidden="true"></i>
-                        <span>Alime_photographer</span>
-                    </a>
-                </div>
-            </div>
-            <!-- Single Instagram Item -->
-            <div class="single-instagram-item">
-                <img src="img/bg-img/16.jpg" alt="">
-                <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#">
-                        <i class="ti-instagram" aria-hidden="true"></i>
-                        <span>Alime_photographer</span>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Follow Area End -->
 
     <!-- Footer Area Start -->
     <footer class="footer-area">
@@ -264,11 +172,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                             <a href="#"><img src="img/core-img/logo2.png" alt=""></a>
                         </div>
                         <!-- Social Info -->
+                        <!-- Social Info -->
                         <div class="social-info">
-                            <a href="#"><i class="ti-facebook" aria-hidden="true"></i></a>
-                            <a href="#"><i class="ti-twitter-alt" aria-hidden="true"></i></a>
-                            <a href="#"><i class="ti-linkedin" aria-hidden="true"></i></a>
-                            <a href="#"><i class="ti-pinterest" aria-hidden="true"></i></a>
+                            <a href="https://twitter.com/MariosKatsak"><i class="ti-twitter-alt" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/mkatsak/"><i class="ti-linkedin" aria-hidden="true"></i></a>
+                            <!-- <a href="#"><i class="ti-pinterest" aria-hidden="true"></i></a> -->
                         </div>
                     </div>
                 </div>
