--- a/gallery.html
+++ b/gallery.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Title -->
-    <title>Alime - Photography HTML Template</title>
+        <!-- Title -->
+        <title>Miltiadis Marios Katsakioris - Personal Website</title>
 
     <!-- Favicon -->
     <link rel="icon" href="./img/core-img/favicon.png">
@@ -71,24 +71,6 @@
                             <div class="classynav">
                                 <ul id="nav">
                                     <li><a href="./index.html">Home</a></li>
-                                    <li><a href="#">Pages</a>
-                                        <ul class="dropdown">
-                                            <li><a href="./index.html">- Home</a></li>
-                                            <li><a href="./about.html">- About</a></li>
-                                            <li><a href="./gallery.html">- Gallery</a></li>
-                                            <li><a href="./blog.html">- Blog</a></li>
-                                            <li><a href="./single-blog.html">- Blog Details</a></li>
-                                            <li><a href="./contact.html">- Contact</a></li>
-                                            <li><a href="#">- Dropdown</a>
-                                                <ul class="dropdown">
-                                                    <li><a href="#">- Dropdown Item</a></li>
-                                                    <li><a href="#">- Dropdown Item</a></li>
-                                                    <li><a href="#">- Dropdown Item</a></li>
-                                                    <li><a href="#">- Dropdown Item</a></li>
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                    </li>
                                     <li><a href="./about.html">About</a></li>
                                     <li class="active"><a href="./gallery.html">Gallery</a></li>
                                     <li><a href="./blog.html">Blog</a></li>
@@ -372,11 +354,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                             <a href="#"><img src="img/core-img/logo2.png" alt=""></a>
                         </div>
                         <!-- Social Info -->
+                        <!-- Social Info -->
                         <div class="social-info">
-                            <a href="#"><i class="ti-facebook" aria-hidden="true"></i></a>
-                            <a href="#"><i class="ti-twitter-alt" aria-hidden="true"></i></a>
-                            <a href="#"><i class="ti-linkedin" aria-hidden="true"></i></a>
-                            <a href="#"><i class="ti-pinterest" aria-hidden="true"></i></a>
+                            <a href="https://twitter.com/MariosKatsak"><i class="ti-twitter-alt" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/mkatsak/"><i class="ti-linkedin" aria-hidden="true"></i></a>
+                            <!-- <a href="#"><i class="ti-pinterest" aria-hidden="true"></i></a> -->
                         </div>
                     </div>
                 </div>
