--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
                                 <ul id="nav">
                                     <li><a href="./index.html">Home</a></li>
                                     <li><a href="./about.html">About</a></li>
-                                    <li><a href="./gallery.html">Gallery</a></li>
+                                    <!-- <li><a href="./gallery.html">Gallery</a></li> -->
                                     <li><a href="./blog.html">Blog</a></li>
                                     <li class="active"><a href="./contact.html">Contact</a></li>
                                 </ul>
